refactor(index): flatten pqFlatten pqCodebooksFlat from float[][] to float[]. Make MemorySegmenta local variable instead of a persistent field. Remove vectorsOffset field. Restructure initialization via @PostConstruct initialize() method.